test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-unmanaged.chpl
//  lhs: shared?  rhs: unmanaged?  error: mm

class MyClass {  var x: int;  }

var rhs: unmanaged MyClass?;

record MyRecord {
  var lhs: shared MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
