test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-unmanaged.good
init-field-dflt-oknil-shared-from-oknil-unmanaged.chpl:11: error: cannot initialize 'shared MyClass?' from a 'unmanaged MyClass?'
